@@ -1,3 +1,8 @@
+12.jun (la)
+      - measure number no more selectable to avoid crash on undo
+      - barline at start of system not selectable to avoid crash on undo
+      - can't create empty part
+      - some memory leak to avoid crash on undo...
 11.jun (la)
       - Restore ability to delete instrument name in place
       - Right click on instrument name for staff properties
